# modern_cmake_samples

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
dlls/dll1/: CMakeLists.txt  dll1.cpp  dll1.h
dlls/dll1/include/dll1/: dll1.h
dlls/dll1/src/: ClasseA.cpp  ClasseA.h  dll1.cpp
exes/: CMakeLists.txt
exes/cppsamples/: CMakeLists.txt  Teste.cpp
exes/cppsamples/src/: main.cpp  samples.cpp  samples.h
exes/cppsamples/tests/: CMakeLists.txt  test.cpp
exes/ctest_sample/: CMakeLists.txt  main.cpp
exes/hello_allegro/: CMakeLists.txt  main.cpp
exes/mysqrt/: CMakeLists.txt  mysqrt.cxx  version.h.in
exes/pman/: CMakeLists.txt  Makefile  main.cpp
exes/pman/src/: main.cpp
exes/regex_sample/: CMakeLists.txt  Tag.cpp  Tag.h  _regex_sample.cpp
exes/run-me_first/: CMakeLists.txt  main.cpp  runbeforemain.cpp
exes/rvalue_reference/: CMakeLists.txt  Teste.cpp
exes/string_manip/: CMakeLists.txt  main.cpp  regex_sample.cpp
exes/stringsworks/: CMakeLists.txt  main.cpp
inc/: head1.h
include/: head1.h
lib/: CMakeLists.txt
libsrc/: CMakeLists.txt
libsrc/allegro-5.2.4.0/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
libsrc/allegro-5.2.4.0/addons/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/addons/acodec/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/addons/audio/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/addons/color/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/addons/font/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/addons/image/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/addons/main/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/addons/memfile/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/addons/native_dialog/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/addons/primitives/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/addons/video/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/demos/cosmic_protector/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/demos/cosmic_protector/cosmic_protector.app/Contents/MacOS/: cosmic_protector
libsrc/allegro-5.2.4.0/demos/skater/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/demos/skater/skater.app/Contents/MacOS/: skater
libsrc/allegro-5.2.4.0/demos/speed/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/demos/speed/speed.app/Contents/MacOS/: speed
libsrc/allegro-5.2.4.0/docs/: Makefile  cmake_install.cmake
libsrc/allegro-5.2.4.0/examples/: Makefile  cmake_install.cmake  ex_acodec  ex_acodec_multi  ex_android  ex_audio_props  ex_audio_simple  ex_audio_timer  ex_bitmap  ex_bitmap_flip  ex_blend  ex_blend2  ex_blend_bench  ex_blend_test  ex_blit  ex_camera  ex_clip  ex_clipboard  ex_color2  ex_compressed  ex_config  ex_convert  ex_cpu  ex_depth_target  ex_dir  ex_disable_screensaver  ex_display_events  ex_display_options  ex_draw  ex_draw_bitmap  ex_drawpixels  ex_dualies  ex_expose  ex_file  ex_file_slice  ex_filter  ex_font  ex_fs_resize  ex_fs_window  ex_get_path  (+74 more)
libsrc/allegro-5.2.4.0/lib/: liballegro.5.2.4.dylib  liballegro_acodec.5.2.4.dylib  liballegro_audio.5.2.4.dylib  liballegro_color.5.2.4.dylib  liballegro_dialog.5.2.4.dylib  liballegro_font.5.2.4.dylib  liballegro_image.5.2.4.dylib  liballegro_main.5.2.4.dylib  liballegro_memfile.5.2.4.dylib  liballegro_primitives.5.2.4.dylib
libsrc/allegro-5.2.4.0/lib/pkgconfig/: allegro-5.pc  allegro_acodec-5.pc  allegro_audio-5.pc  allegro_color-5.pc  allegro_dialog-5.pc  allegro_font-5.pc  allegro_image-5.pc  allegro_main-5.pc  allegro_memfile-5.pc  allegro_primitives-5.pc
libsrc/allegro-5.2.4.0/tests/: Makefile  cmake_install.cmake
libsrc/lib1/: CMakeLists.txt  lib1.cpp
libsrc/lib1/include/lib1/: lib1.h
libsrc/lib1/src/: lib1.cpp
libsrc/lib1/tests/: lib1_test.cpp
